# duke-sdk

./: .gitignore  README.md  design.md  pyproject.toml  setup.cfg
src/the_one_api/_base/: _multiple_results.py
tests/: conftest.py  test_base.py  test_multilple_results.py  test_single_results.py
