[project]
name = "the_one_api_sdk_duke"
version = "0.0.0"
authors = [
  { name="Heather Duke", email="heathernoelduke@gmail.com" },
]
description = "A Python SDK to aid interacting with The One API data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.30.0"
]

[project.urls]
"Homepage" = "https://github.com/hnduke/duke-sdk"
"Bug Tracker" = "https://github.com/hnduke/duke-sdk/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
